# 2captcha

./: CMakeLists.txt  README.md  client.cpp  http.txt  install.sh  proxies.txt  script.py  server.cpp  socks5.txt
proxy-proj/: client.cpp  http.txt  server.cpp  socks5.txt
